--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.220.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
   },
   "devDependencies": {
