--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-slot": "^1.0.1",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
