--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drag-and-drop",
+  "name": "db-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1",
-    "@radix-ui/react-checkbox": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-slot": "^1.0.1",
-    "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "lucide-react": "^0.220.0",
     "next": "13.4.3",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "prisma": "^4.14.1"
   }
 }
